[gd_scene load_steps=11 format=3 uid="uid://diwo3ru0y8t16"]

[ext_resource type="Script" path="res://scripts/player/Player.gd" id="1_ixkpr"]
[ext_resource type="Script" path="res://scripts/player/PlayerLogic.gd" id="2_qjcmw"]
[ext_resource type="Script" path="res://scripts/player/Movement.gd" id="3_2hrqv"]
[ext_resource type="Script" path="res://addons/smoothing/smoothing.gd" id="4_sowjb"]
[ext_resource type="Texture2D" uid="uid://s5khgrew0wrg" path="res://assets/textures/player/player.png" id="5_b0ot0"]
[ext_resource type="Script" path="res://scripts/PrismlikeCollisionShape.gd" id="9_0to01"]
[ext_resource type="ArrayMesh" uid="uid://bsiqvytaemjig" path="res://assets/models/gun.obj" id="9_1wiru"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_exwgm"]
albedo_texture = ExtResource("5_b0ot0")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_prdut"]
material = SubResource("StandardMaterial3D_exwgm")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_k8582"]
points = PackedVector3Array(0.3, -1, 0, 0.15, -1, 0.259808, -0.15, -1, 0.259808, -0.3, -1, 3.67382e-17, -0.15, -1, -0.259808, 0.15, -1, -0.259808, 0.5, -0.8, 0, 0.25, -0.8, 0.433013, -0.25, -0.8, 0.433013, -0.5, -0.8, 6.12303e-17, -0.25, -0.8, -0.433013, 0.25, -0.8, -0.433013, 0.5, 0.8, 0, 0.25, 0.8, 0.433013, -0.25, 0.8, 0.433013, -0.5, 0.8, 6.12303e-17, -0.25, 0.8, -0.433013, 0.25, 0.8, -0.433013, 0.3, 1, 0, 0.15, 1, 0.259808, -0.15, 1, 0.259808, -0.3, 1, 3.67382e-17, -0.15, 1, -0.259808, 0.15, 1, -0.259808)
script = ExtResource("9_0to01")
height = 2.0
radius = 0.5
sides_count = 6
upper_height = 0.2
upper_radius = 0.3
lower_height = 0.2
lower_radius = 0.3
twist = false

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("rotatable", "spring_arm", "camera") groups=["Player"]]
script = ExtResource("1_ixkpr")
rotatable = NodePath("Smoothing/Rotatable")
spring_arm = NodePath("Smoothing/Rotatable/SpringArm3D")
camera = NodePath("Smoothing/Rotatable/SpringArm3D/Camera3D")

[node name="Logic" type="Node" parent="."]
script = ExtResource("2_qjcmw")

[node name="Movement" type="Node" parent="Logic" node_paths=PackedStringArray("rotatable")]
script = ExtResource("3_2hrqv")
rotatable = NodePath("../../Smoothing/Rotatable")
coyote = 0.2
dash_speed = 40

[node name="DashTimer" type="Timer" parent="Logic" groups=["PlayerTimers"]]
wait_time = 0.07
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="Logic" groups=["PlayerTimers"]]
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Logic" groups=["PlayerTimers"]]
wait_time = 0.2
one_shot = true

[node name="Smoothing" type="Node3D" parent="."]
script = ExtResource("4_sowjb")
target = NodePath("..")

[node name="Rotatable" type="Node3D" parent="Smoothing"]

[node name="Model" type="MeshInstance3D" parent="Smoothing/Rotatable"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_prdut")
skeleton = NodePath("../../..")

[node name="SpringArm3D" type="SpringArm3D" parent="Smoothing/Rotatable"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="Smoothing/Rotatable/SpringArm3D"]

[node name="Gun" type="MeshInstance3D" parent="Smoothing/Rotatable/SpringArm3D/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.609646, -0.701342, -1.39015)
mesh = ExtResource("9_1wiru")

[node name="Collision" type="CollisionShape3D" parent="."]
editor_description = "!!! box collider doesn't work properly with uneven terrain like stairs, need to add some sort of step height !!!"
transform = Transform3D(1, -5.41882e-07, -0.000680678, 5.41874e-07, 1, -1.20134e-08, 0.000680678, 1.16338e-08, 1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_k8582")

[connection signal="timeout" from="Logic/DashTimer" to="Logic" method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Logic/DashCooldownTimer" to="Logic" method="_on_dash_cooldown_timer_timeout"]
[connection signal="timeout" from="Logic/CoyoteTimer" to="Logic" method="_on_coyote_timer_timeout"]
